# vexilon

./: .dockerignore  .env  .gitattributes  .gitignore  .openspec.yaml  .tmp_v10.json  .tmp_v17.json  CONTRIBUTING.md  Containerfile  PRIVACY.md  README.md  SPEC.md  app.py  compose.yml  conftest.py  get_dom.py  pyproject.toml  renovate.json  requirements.txt  style.css
.agent/skills/openspec-archive-change/: SKILL.md
.agent/workflows/: opsx-archive.md
.agents/rules/: project-rules.md
.agents/workflows/: agent-discipline.md  cicd-spec.md  rag-pipeline.md  testing-standards.md  ui-standards.md
.github/: CODEOWNERS  copilot-instructions.md  renovate.json
.github/scripts/: deploy.sh  verify_deployment.sh
.github/workflows/: analysis.yml  cache-audit.yml  ci.yml  deploy-hf-spaces-reusable.yml  deploy-hf-spaces.yml  deploy-prod.yml  deploy-test.yml  merge.yml  pr-open.yml  produce.yml
.pdf_cache/: index.faiss  manifest.json
agnav/: indexing.py
agnav/scripts/: generate_cache_manifest.py  statute_processor.py  test_staging.py
agnav/tests/: test_chunking.py  test_condense_query.py  test_fetch.py  test_md_loader.py  test_ohs_referral.py  test_persistence.py  test_tokenizer_offset.py
agnav/tests/integration/: test_app_flow.py
app/: .dockerignore  Containerfile  README.md  SPEC.md  chainlit.md  conftest.py  indexing.py  main.py  metadata.yml  patches.py  pyproject.toml  requirements.txt
app/.chainlit/: config.toml
app/.chainlit/translations/: en-US.json
app/data/labour_law/: manifest.json
app/docs/: ACCESSIBILITY.md  CACHE_WORKFLOW.md  MARKDOWN_CONVERSION.md
app/prompts/: developer.txt  direct_staff_rep.txt  manager.txt  steward.txt
app/public/: custom.js  custom_v11.js  index.js  index_v2.js  index_v4.js  style.css  style_v2.css
app/public/docs/: labour_law
app/scratch/: repro_anyio.py  repro_anyio_advanced.py  repro_sniffio.py  repro_task_states.py  repro_wait_for.py  repro_weakref.py
app/scripts/: build_index.py  generate_cache_manifest.py  smoke_e2e.py  smoke_multi.py  statute_processor.py  test_staging.py
app/tests/: test_chunking.py  test_condense_query.py  test_deploy_integrity.py  test_fetch.py  test_index.py  test_md_ingestion.py  test_md_loader.py  test_multi_perspective.py  test_ohs_referral.py  test_pdf_resolution.py  test_persistence.py  test_rag_stream.py  test_sanitize_input.py  test_session_persistence.py  test_tokenizer_offset.py  test_verify_response.py  test_wca_referral.py
data/labour_law/: manifest.json  manifest.pkl
data/labour_law/tests/: index.md  (+1 more)
docs/: CACHE_WORKFLOW.md  DOCKER_CACHING_STRATEGY.md  DOCKER_QUICK_REFERENCE.md  MARKDOWN_CONVERSION.md  PRIVACY.md
instructions/: personal-developer-profile.md
openspec/: AGENTS.md  config.yaml  project.md
pdf_cache/: chunks.json  index.faiss
prompts/: case_builder.txt  developer.txt  direct_staff_rep.txt  steward.txt
scripts/: batch_convert.py  build_index.py  deploy.sh  generate_cache_manifest.py  generate_source_manifest.py  hf_mirror.py  integration_e2e.sh  pdf_to_md.py  reload.py  startup.sh  statute_processor.py
src/: indexing.py
src/agnav/: indexing.py
src/prompts/: case_builder.txt  millhaven_audit_criteria.txt
src/scripts/: startup.sh
tests/: test_boundary_bridge.py  test_chunking.py  test_condense_query.py  test_deploy_integrity.py  test_fetch.py  test_index.py  test_knowledge_base.py  test_md_ingestion.py  test_md_loader.py  test_multi_perspective.py  test_ohs_referral.py  test_pdf_loader.py  test_pdf_real.py  test_persistence.py  test_rag_stream.py  test_rate_limit.py  test_sanitize_input.py  test_tokenizer_offset.py  test_ui_layout.py  test_verify_response.py  test_wca_referral.py
tests/integration/: test_app_flow.py  test_embed_pipeline.py  test_gradio_ui.py  test_manager_persona.py  test_viewport_integrity.py
tests/smoke/: test_model_valid.py
vexilon/: indexing.py  telemetry.py
(+130 files in other folders)
