[project]
name = "vexilon"
version = "0.1.0"
description = "BCGEU Collective Agreement RAG Chatbot"
requires-python = ">=3.12"
dependencies = [
    # ── Web UI ──────────────────────────────────────────────────────────────
    "gradio>=6.7.0",
    # ── LLM ─────────────────────────────────────────────────────────────────
    "anthropic>=0.84.0",            # Claude API client
    # ── Embeddings (local CPU, no API key required) ──────────────────────────
    # torch is sourced from the CPU-only wheel index (see [[tool.uv.index]])
    # to avoid pulling the 3 GB CUDA stack that the default PyPI index would
    # resolve via sentence-transformers' transitive dep.
    "torch",
    "sentence-transformers>=5.0.0", # BAAI/bge-small-en-v1.5 — runs on CPU
    # ── Vector store ─────────────────────────────────────────────────────────
    "faiss-cpu>=1.8.0",             # In-memory vector index (no server process)
    # ── PDF processing ───────────────────────────────────────────────────────
    # PDF parsing with page number preservation
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",                # Test runner
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",          # Mocking fixtures (mocker)
]

# ── uv index configuration ───────────────────────────────────────────────────
# Route torch (and only torch) to PyTorch's CPU-only wheel index so uv never
# resolves the 3 GB CUDA variant from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Upstream deprecation warnings from FAISS/SWIG when running on Python 3.14.
# These cannot be fixed in application code and are purely cosmetic.
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
